Add "--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED" to jvm args in jdk17 env